Update readme for landing page

--- a/1_recipes/index.html
+++ b/1_recipes/index.html
@@ -14,8 +14,8 @@
         <h1>Recipes</h1>
 
         <ul>
-            <li><a href="/src/pages/apple-pie.html">Apple Pie</a></li>
-            <li><a href="/src/pages/lasagna.html">Lasagna</a></li>
+            <li><a href="/src/pages/page-1.html">Apple Pie</a></li>
+            <li><a href="/src/pages/page-2.html">Lasagna</a></li>
         </ul>
     </main>
 </body>
