--- a/2_landing-page/index.html
+++ b/2_landing-page/index.html
@@ -41,28 +41,28 @@
             <h2 class="center">Some Information</h2>
             <div class="grid">
                 <hgroup>
-                    <article class="placeholder square">
+                    <article class="placeholder">
                         <img src="" alt="Placeholder">
                     </article>
                     <p>Some subtext under an illustration</p>
                 </hgroup>
 
                 <hgroup>
-                    <article class="placeholder square">
+                    <article class="placeholder">
                         <img src="" alt="Placeholder">
                     </article>
                     <p>Some subtext under an illustration</p>
                 </hgroup>
 
                 <hgroup>
-                    <article class="placeholder square">
+                    <article class="placeholder">
                         <img src="" alt="Placeholder">
                     </article>
                     <p>Some subtext under an illustration</p>
                 </hgroup>
 
                 <hgroup>
-                    <article class="placeholder square">
+                    <article class="placeholder">
                         <img src="" alt="Placeholder">
                     </article>
                     <p>Some subtext under an illustration</p>
