Extract css into utility classes approach

--- a/1_landing-page/index.html
+++ b/1_landing-page/index.html
@@ -32,13 +32,13 @@
                 <button type="button">Sign Up</button>
             </div>
 
-            <article class="placeholder">
+            <article>
                 <img src="" alt="Even a placeholder for an image">
             </article>
         </section>
 
         <section>
-            <h2 class="center">Some Information</h2>
+            <h2 class="text-center">Some Information</h2>
             <div class="grid">
                 <hgroup>
                     <article class="placeholder">
@@ -70,7 +70,7 @@
             </div>
         </section>
 
-        <blockquote class="pico-background-azure-500">
+        <blockquote class="pico-background-azure-500 border-left-azure-600 mtb-4r">
             Inspiring quote: Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint
             consectetur cupidatat.
             <footer>
@@ -79,19 +79,19 @@
         </blockquote>
 
         <section>
-            <article class="grid action">
-                <hgroup>
+            <article class="grid">
+                <hgroup class="mb-0">
                     <h3>Call to action! It's time!</h3>
                     <p>Sign up for our product by clicking the button</p>
                 </hgroup>
 
-                <button type="button" class="contrast">Sign Up</button>
+                <button type="button" class="contrast mb-0">Sign Up</button>
             </article>
         </section>
     </main>
 
     <hr />
-    <footer class="container-fluid center">
+    <footer class="container-fluid text-center">
         Copyright 2000
     </footer>
 </body>
